5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1800_2569.log
== TEST (2019-06-11 11:15:48) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	v = sqrt((x[i] - m)**2/size(x)-1)
	i = i + 1
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:14) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	v = sqrt((x[i] - m)**2/size(x)-1)
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:53) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	v = round(sqrt((x[i] - m)**2/size(x)-1), 3)
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:07) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	v = round(sqrt((x[i] - m)**2/size(x)-1) * 2, 3)
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:47) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
m = sum(x)/size(x)
i = 0
for i in range(size(x)):
	d = round(sqrt((x[i] - m)**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:51) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = round(sqrt((x[i] -(sum(x)/size(x)) )**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:21:54) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 1
for i in range(size(x)):
	d = round(sqrt((x[i]-(sum(x)/size(x))**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:22:28) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = round(sqrt((x[i]-(sum(x)/size(x))**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:31:48) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d[i] = round(sqrt((x[i]-(sum(x)/size(x))**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:33:24) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = round(sqrt((x[i]-(sum(x)/size(x))**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:33:32) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = round(sqrt((x[i]-(sum(x)/size(x))**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:33:45) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = sqrt((x[i]-(sum(x)/size(x))**2/size(x)-1)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:33:55) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = sqrt((x-(sum(x)/size(x))**2/size(x)-1)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:33:57) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
for i in range(size(x)):
	d = sqrt((x-(sum(x)/size(x))**2/size(x)-1)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:35:39) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = round(sqrt(((x-m)**2)/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:36:24) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = round(sqrt((x[i]-m)**2/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:36:42) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = round(sqrt(((x[i]-m)**2)/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:38:22) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range x:
	d = round(sqrt(((x[i]-m)**2)/size(x)-1), 3)
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 5
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:26) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
d =  sqrt(((x[i]-m)**2)/size(x)-1)
p = 0
for i in range(size(x)):
	p = d + p 
	i = i + 1
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:43:08) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
d = sqrt(((x[i]-m)**2)/size(x)-1)
p = 0
for i in range(size(x)):
	p =  p + d
	i = i + 1
	d = sqrt(((x[i]-m)**2)/size(x)-1)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:45:25) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = sqrt(((x[i]-m)**2)/size(x)-1)
	i = i + 1
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:47:25) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = sqrt(((x[i]-m)**2)/size(x)-1)
	i = i + 1
print(round(d, 3))
-- EXECUTION TIME:
1.2346
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
20.279
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
11.745
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
nan
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:49:02) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x[i]-m)**2)/size(x)-1)
	i = i + 1
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:49:53) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x[i]-m)**2)/size(x)-1)
	i = i + 1
	d = d + 1
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:06) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
d = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x[i]-m)**2)/size(x)-1)
	i = i + 1
	d = d + 1
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:16) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
d = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x[i]-m)**2)/size(x)-1)
	i = i + 1
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:51:27) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
d = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x-m)**2)/size(x)-1)
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:51:46) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
d = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x-m)**2)/size(x)-1)
	d = d+1
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:51:51) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))
i = 0
d = 0
m = sum(x)/size(x)
for i in range(size(x)):
	d = d + sqrt(((x-m)**2)/size(x)-1)
	d = d+1
print(round(d, 3)) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:55:47) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))

b = 0
m = sum(x)/size(x)
for i in range(size(x)):
	b = b + ((x[i]-m)**2)
d = round((b/size(x)-1))**(1/2), 3	
print(d) 
-- EXECUTION TIME:
1.20782
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
(97.03607576566563, 3)
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
v: (19.235384061671343, 3)
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
v: (nan, 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:56:32) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))

b = 0
m = sum(x)/size(x)
for i in range(size(x)):
	b = b + (x[i]-m)**2
d = round((b/size(x)-1)**(1/2), 3)
print(d) 
-- EXECUTION TIME:
1.21554
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.038
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.228
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
nan
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:57:08) 
-- CODE:
from numpy import *
x = array(eval(input("v: ")))

b = 0
m = sum(x)/size(x)
for i in range(size(x)):
	b = b + (x[i]-m)**2
d = round((b/(size(x)-1))**(1/2), 3)
print(d) 
-- EXECUTION TIME:
1.13907
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
